src/styles/base/_base.scss
@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');

html{
  font-size: 10px;
}

*{
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body{
  margin: 0;
  font-family: 'Lato', sans-serif;
  transition: 0.2s;
}

.container{
  max-width: 990px;
  margin: auto;
}

.textarea{
  width: 100%;
  margin: 100px 0 20px;
  padding: 20px;
  background-color: #e3e3e3;
  border: none;
  border-radius: 7px;
  font-size: 1.8rem;
  line-height: 2.0rem;
  resize: vertical;
  max-height: 350px;
  transition: 0.2s;
}

.title{
  padding: 30px 0;
  text-align: center;
  font-size: 3.5rem;
}

